# robotic_arm

./: .gitignore  LICENSE  README.md
docker/: Dockerfile  build.bash  run.bash
models/beer/: beer.sdf  model.sdf
models/camera/: model.sdf
models/coke_can/: model.sdf
src/: arm_control.py  gym-robotic-arm.py  read_cam_frame.py  requirements.txt  spawn_object.py
src/model_pose_publisher/: CMakeLists.txt  main.cpp
src/model_pose_publisher/include/: gazebo_model_pose_publisher.hpp
src/model_pose_publisher/src/: gazebo_model_pose_publisher.cpp
src/utils/: arm_control.py  get_model_state.py  read_cam_frame.py
